# cpptempl

./: CMakeLists.txt
cmake/: Config.cmake.in  createcmakeconfig.cmake
pkgconfig/: createpkgconfig.cmake
src/: CMakeLists.txt  cpptempl.h
test/: CMakeLists.txt  Makefile  cpptempl_test.cc
